# open-pulse-quickstart

./: .gitignore  2025-mini-hackathon.md  LICENSE  README.md  environment.yml  requirements.txt  sparql-querying.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build.yml  docker-neo4j-build.yml
data/entities-metadata/: 0todd0000_spm1d.json  1syo_wercker-step-gitter-notify.json  2dav8_MoCap.json  2dav8_NeWCRFs.json  2point0.json  7oud.json  A-Baji.json  AdaptiveMotorControlLab.json  AleHD.json  AlessioM.json  AlexEMG.json  Alyetama.json  Amaan24.json  Andersw88.json  AndrewBasem1.json  AndyZhu1991.json  Animadversio.json  Anirudh257.json  AnnaStuckert.json  CyrilWaechter.json  CyrilWaechter_FreeCAD.json  CyrilWaechter_IfcRelSpaceBoundary_TestFiles.json  CyrilWaechter_OpenBIM-for-pyRevit.json  CyrilWaechter_PySpeckle.json  CyrilWaechter_blender_vscode.json  CyrilWaechter_freecad-stubs.json  CyrilWaechter_pyRevitMEP.json  CyrilWaechter_pygbxmlcleaner.json  CyrilWaechter_python-fcl.json  CyrilWaechter_python-materialsdb.json  CyrilWaechter_python-revit-resources.json  CyrilWaechter_pythoncvc.net.json  CyrilWaechter_pythonocc-core.json  CyrilWaechter_revitpythonshell.json  DeepLabCut.json  DeepLabCutAIResidency.json  DudLab.json  EPFL-Center-for-Imaging.json  Element84.json  EmoryUniversityTheoreticalBiophysics.json  (+79 more)
src/: pyproject.toml  requirements.txt
src/neo4j-quickstart/: .env.dist  README.md  pyproject.toml  quickstart.ipynb  quickstart.py
src/neo4j-quickstart/utils/: builder_dataframe.py  builder_models.py  models.py  neo4jdownloader.py  visualization.py
src/ossinsight-quickstart/: README.md  pyproject.toml  quickstart.ipynb  quickstart.py
src/tentris-quickstart/: .env.dist  README.md  pyproject.toml  quickstart.ipynb
src/tentris-quickstart/tentris_notebook_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/images/: Dockerfile  Dockerfile-neo4j
(+9 files in other folders)
