[project]
name = "quickstart"
version = "0.1.0"
description = "Unified environment for all quickstarts"
requires-python = ">=3.10"

# Include submodules and global tools
#TO-DO any more elegant way to do so? 
dependencies = [
    #neo4j 
    "adjusttext>=1.3.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "neo4j>=6.0.2",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.1",
    
    "jupyterlab",
    "ipykernel",
    "black",
    "ruff",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
